--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,5 @@
-<h1>welcome to clubhouse</h1>
+<div class="container w-50">
+<h1 class="mt-4 text-center">welcome to clubhouse</h1>
+
+<%= render 'result'%>
+</div>
