--- a/app/views/posts/_result.html.erb
+++ b/app/views/posts/_result.html.erb
@@ -7,7 +7,7 @@
     <h5 class="card-title text-white"><%= post.title%></h5>
     <p class="card-text text-white"><%= post.body%></p>
   </div>
-  <div class="card-footer text-muted">
+  <div class="card-footer text-white">
     <%= time_ago_in_words(post.created_at)%>
   </div>
 </div>
