--- a/app/views/posts/_result.html.erb
+++ b/app/views/posts/_result.html.erb
@@ -1,7 +1,9 @@
 <% @posts.each do |post| %>
 <div class="card text-center text-font mt-4 shdw card-bg">
   <div class="card-header">
-   by <%= post.user.username unless post.user.blank? %>
+     <%if post.user%>
+        By <%=post.user.username%>
+     <% end -%>
   </div>
   <div class="card-body">
     <h5 class="card-title text-white"><%= post.title%></h5>
