--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container w-50">
-<h1 class="mt-4 text-center">welcome to clubhouse</h1>
+<h1 class="mt-4 text-center">welcome to the clubhouse</h1>
 
 <%= render 'result'%>
 </div>
