--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,14 @@
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre&family=Handlee&family=Sniglet&display=swap');
 
+html,
 body {
   background-color: whitesmoke;
+  height: 100%;
 }
 
-.navbar {
+.navbar,
+.main-footer {
   background: #0f2027;
   background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
 }
@@ -30,4 +33,8 @@ h1 {
 
 .text-white {
   color: white !important;
+}
+
+#page-content {
+  flex: 1 0 auto;
 }
