--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MembersOnly</title>
+    <title>Club House</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -9,12 +9,14 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+<body class="d-flex flex-column">
     <%= render 'layouts/navbar' %>
-    <div class="container">
-    <%=render 'layouts/message' %>
+    <div id="page-content">
+      <%= render 'layouts/message' %>
       <%= yield %>
     </div>
-    
-  </body>
+  <%=render 'layouts/footer' %>  
+</body>
 </html>
+
+
